tests/snapshots/run_wpt_conformance__onnx_logicalXor_uint8_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_xor.https.any.js",
    "logicalXor uint8 5D inputs with alternating broadcast axes",
    "onnx",
    "PASS",
)
