tests/snapshots/run_wpt_conformance__onnx_logicalXor_uint8_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_xor.https.any.js",
    "logicalXor uint8 5D tensors",
    "onnx",
    "PASS",
)
